k8s/api/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ds-aggregator-api${HASH_BRANCH_NAME}
  labels:
    app: ds-aggregator-api${HASH_BRANCH_NAME}
    branch: ds-aggregator${HASH_BRANCH_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ds-aggregator-api${HASH_BRANCH_NAME}
  template:
    metadata:
      labels:
        app: ds-aggregator-api${HASH_BRANCH_NAME}
    spec:
      containers:
        - image: ${DS_AGGREGATOR_REGISTRY}/api:${IMAGE_TAG}
          name: ds-aggregator-api
          ports:
            - containerPort: ${PORT}
